[gd_scene load_steps=17 format=3 uid="uid://csahdmph2aji4"]

[ext_resource type="Script" path="res://src/Game.gd" id="1_wmfvw"]
[ext_resource type="Script" path="res://src/Grid.gd" id="2_vwm0l"]
[ext_resource type="PackedScene" uid="uid://dsjpl5sxdtvmq" path="res://scenes/LCDPad.tscn" id="3_lqy58"]
[ext_resource type="PackedScene" uid="uid://qdwx3kd7wyd2" path="res://scenes/Knob.tscn" id="3_um6dn"]
[ext_resource type="PackedScene" uid="uid://0iqhotbf07b2" path="res://scenes/SnappingKnob.tscn" id="4_3leu0"]
[ext_resource type="PackedScene" uid="uid://cuk26q7f3uvoj" path="res://scenes/PressPad.tscn" id="5_tyfly"]
[ext_resource type="PackedScene" uid="uid://cmk4coljo6jb3" path="res://scenes/Speaker.tscn" id="7_wpfpf"]
[ext_resource type="AudioStream" uid="uid://d25s84v6x76x7" path="res://sfx/0.wav" id="8_ul41t"]
[ext_resource type="AudioStream" uid="uid://cxpy8wld3g5xe" path="res://sfx/1.wav" id="9_elxus"]
[ext_resource type="AudioStream" uid="uid://cj5aalmq7cdve" path="res://sfx/2.wav" id="10_gydn5"]
[ext_resource type="AudioStream" uid="uid://bvp2pdkljt574" path="res://sfx/3.wav" id="11_fbxbw"]
[ext_resource type="AudioStream" uid="uid://ks616mrwwmc2" path="res://sfx/4.wav" id="12_411ef"]
[ext_resource type="AudioStream" uid="uid://cdudwchrgsiq5" path="res://sfx/5.wav" id="13_oy5c3"]
[ext_resource type="AudioStream" uid="uid://drxm4sv0yrphj" path="res://sfx/6.wav" id="14_qygcc"]
[ext_resource type="AudioStream" uid="uid://6x4jxvtk4ljw" path="res://sfx/7.wav" id="15_pjh6y"]
[ext_resource type="AudioStream" uid="uid://d3gxsy44nkh0c" path="res://sfx/8.wav" id="16_scp06"]

[node name="Game" type="Node2D"]
script = ExtResource("1_wmfvw")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Grid" type="GridContainer" parent="HUD" node_paths=PackedStringArray("direction_knob", "start_pad", "beat_timer")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 20.0
offset_right = -540.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
columns = 9
script = ExtResource("2_vwm0l")
direction_knob = NodePath("../DirectionKnob")
start_pad = NodePath("../StartPad")
beat_timer = NodePath("../../BeatTimer")

[node name="PressPad" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad2" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad3" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad4" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad5" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad6" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad7" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad8" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad9" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad10" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad11" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad12" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad13" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad14" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad15" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad16" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad17" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad18" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad19" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad20" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad21" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad22" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad23" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad24" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad25" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad26" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad27" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad28" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad29" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad30" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad31" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad32" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad33" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad34" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad35" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad36" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad37" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad38" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad39" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad40" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad41" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad42" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad43" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad44" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad45" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad46" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad47" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad48" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad49" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad50" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad51" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad52" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad53" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad54" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad55" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad56" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad57" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad58" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad59" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad60" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad61" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad62" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad63" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad64" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad65" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad66" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad67" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad68" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad69" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad70" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad71" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad72" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad73" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad74" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad75" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad76" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad77" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad78" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad79" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad80" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="PressPad81" parent="HUD/Grid" instance=ExtResource("3_lqy58")]
layout_mode = 2

[node name="Knob" parent="HUD" instance=ExtResource("3_um6dn")]
offset_left = 743.0
offset_top = 194.0
offset_right = 743.0
offset_bottom = 194.0
default_value = 5.0
highest_value = 10.0
step = 0.05

[node name="DirectionKnob" parent="HUD" instance=ExtResource("4_3leu0")]
offset_left = 819.0
offset_top = 195.0
offset_right = 819.0
offset_bottom = 195.0
default_value = 0
highest_value = 3
lowest_degrees = 0.0
highest_degrees = 270.0

[node name="StartPad" parent="HUD" instance=ExtResource("5_tyfly")]
offset_left = 673.0
offset_top = 18.0
offset_right = 673.0
offset_bottom = 18.0

[node name="BeatTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Speaker" parent="." instance=ExtResource("7_wpfpf")]

[node name="Sound0" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("8_ul41t")
max_polyphony = 20

[node name="Sound1" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("9_elxus")
max_polyphony = 20

[node name="Sound2" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("10_gydn5")
max_polyphony = 20

[node name="Sound3" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("11_fbxbw")
max_polyphony = 20

[node name="Sound4" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("12_411ef")
max_polyphony = 20

[node name="Sound5" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("13_oy5c3")
max_polyphony = 20

[node name="Sound6" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("14_qygcc")
max_polyphony = 20

[node name="Sound7" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("15_pjh6y")
max_polyphony = 20

[node name="Sound8" type="AudioStreamPlayer" parent="Speaker"]
stream = ExtResource("16_scp06")
max_polyphony = 20
